Complete P1.8 governance audit and notification outbox